--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.2"
+    "next": "15.4.2",
+    "googleapis": "^133.0.0",
+    "google-auth-library": "^9.6.3"
   },
   "devDependencies": {
     "typescript": "^5",
